--- a/packages/web-components/src/components/ic-tooltip/ic-tooltip.css
+++ b/packages/web-components/src/components/ic-tooltip/ic-tooltip.css
@@ -1,5 +1,9 @@
 @import "../../global/normalize.css";
 
+/**
+ * @prop --ic-z-index-tooltip: z-index of tooltip
+ */
+
 :host(.ic-tooltip) .ic-tooltip-container {
   background-color: var(--ic-architectural-800);
   color: #ffff;
@@ -9,7 +13,7 @@
   position: absolute;
   max-width: 20rem;
   display: none;
-  z-index: calc(var(--ic-z-index-overlay) / 2);
+  z-index: var(--ic-z-index-tooltip);
   box-shadow: var(--ic-elevation-overlay);
 }
 
@@ -95,12 +99,6 @@
   .ic-tooltip-container[data-popper-placement^="right"]
   > .ic-tooltip-arrow::before {
   border-radius: var(--ic-border-radius) 0 0 var(--ic-border-radius);
-}
-
-:host([target="ic-button-with-tooltip-search-submit-button"])
-  .ic-tooltip-container,
-:host([target="ic-button-with-tooltip-clear-button"]) .ic-tooltip-container {
-  z-index: calc(var(--ic-z-index-popup-menu) + 1);
 }
 
 @media (forced-colors: active) {
